--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1471,7 +1471,8 @@ function cookiesEnabled() {
 }
 
 function resizeDisplay() {
-	window.resizeEvt;
+	// Revised skin.json lets browser handle the number of columns to display.  Hence no event is required. The event slows everything down significantly
+/* 	window.resizeEvt;
 	$(window).resize(function(){
 		var newWidth = getWindowWidth();
 		var oldWidth = data.oldWindowWidth;
@@ -1496,7 +1497,7 @@ function resizeDisplay() {
 			}, 100);
 		}
 <?endif;?>
-	});
+	}); */
 }
 
 function isTouch() {
