Use symlink for icon.  Saves 5K

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -1,5 +1,6 @@
 Menu="hidden"
-Title="Community Applications Settings"
+Title="Community Applications"
+Icon="community.applications.png"
 ---
 <?
 function download_url($url, $path = "", $bg = false)
