Remove showInfo shit.  Switch CA changelog back to showDesc\

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -445,7 +445,6 @@ function setToolTip() {
 		enableMultiInstall();
 	});
 	$('.ca_appPopup').attr('title','Loading...');
-	$('.ca_infoPopup').attr('title','Loading...');
 	$('.ca_tooltip').tooltipster({
 		contentAsHTML:true,
 		delay:[<?=$cfg['hoverTime']?>,1],
@@ -486,27 +485,6 @@ function setToolTip() {
 				arrow:true, trigger:'custom',
 				triggerOpen:{mouseenter: true},
 				triggerClose:{click:true,scroll:true,mouseleave:true}
-			});
-		}
-	});
-	$('.ca_infoPopup').tooltipster({
-		contentAsHTML: true,
-		distance:-10,
-		animation: 'none',
-		trigger: 'custom',
-		triggerOpen: {mouseenter:false,click:true,touchstart:true},
-		triggerClose:{click:true,mouseleave:false},
-		delay:[<?=$cfg['hoverTime']?>,1],
-		interactive: true,
-		viewportAware: true,
-		functionBefore: function(instance,helper) {
-			var origin = $(helper.origin);
-			var app = origin.attr('data-app');
-			var name = origin.attr('data-name');
-			$.post("/plugins/<?=$plugin?>/scripts/showInfo.php",{action:'none',app:app,name:name},function(data) {
-				if (data) {
-					instance.content(data);
-				}
 			});
 		}
 	});
@@ -1502,7 +1480,7 @@ function getFontSize() {
 <div style='width:100%; display:none;' class='multi_installDiv'><center><input class='multi_install multi_installButton' type='button' value='Install Selected Applications' disabled><input type='button' class='multi_installClear' value='Clear Selected' disabled></center></div>
 </center>
 <center><a href='https://forums.unraid.net/topic/38582-plug-in-community-applications/' target='_blank'>Support Thread</a></center><br>
-<center>Community Applications Version: <?=$installedVersion?>  <i class='ca_infoPopup fa fa-info-circle' style='cursor:pointer;font-size:1.5rem;color:lightblue;'></i></center></div>
+<center>Community Applications Version: <?=$installedVersion?>  <i class='ca_appPopup fa fa-info-circle' data-appPath='ca' style='cursor:pointer;font-size:1.5rem;color:lightblue;'></i></center></div>
 
 <span id='miscScript'></span><span id='awesomepleteScript'></span>
 <div>
