--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -84,8 +84,9 @@ Hide Incompatible Applications:
 
 Start-up Display:
 : <select name="startup" size="1">
-	<?=mk_option($cfg['startup'],"new", "Newest Applications (default)")?>
+	<?=mk_option($cfg['startup'],"new", "New / Updated Applications (default)")?>
 	<?=mk_option($cfg['startup'],"random", "Random Applications")?>
+	<?=mk_option($cfg['startup'],"onlynew", "Only newest added applications")?>
 	</select>
 
 > This setting chooses whether to display a random "app of the day" or the most recently added / updated applications
