--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
@@ -65,3 +65,4 @@ input[type=checkbox] {width:2rem;height:2rem;}
 .ca_dateAdded {font-weight:bold;text-align:center;}
 .ca_dateAdded::before {content:"Dated Added: ";}
 .ca_dateUpdatedDate {font-weight:normal;}
+#cookieWarning {display:none;margin-top:-160px;'}
