--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -27,32 +27,9 @@ if ( ! is_file($communityPaths['warningAccepted']) ) {
 }
 $unRaidSettings = parse_ini_file($communityPaths['unRaidVersion']);
 $unRaid66 = version_compare($unRaidSettings['version'],"6.5.3",">");
-$unRaid66color = $unRaid66 ? "#FF8C2F" : "green";
-
-$skinPath = "/usr/local/emhttp/plugins/community.applications/skins/{$cfg['skin']}";
-$communityPaths['defaultSkin'] = "$skinPath/skin.json";
-
-$template = readJsonFile($communityPaths['defaultSkin']);
-
 ?>
-<?if ( is_file("$skinPath/default.css") ):?>
-<link href="<?=autov("/plugins/community.applications/skins/{$cfg['skin']}/default.css")?>" type='text/css' rel='stylesheet'>
-<?endif;?>
-<?if ( is_file("$skinPath/{$display['theme']}.css") ):?>
-<link href="<?=autov("/plugins/community.applications/skins/{$cfg['skin']}/{$display['theme']}.css")?>" type='text/css' rel="stylesheet">
-<?endif;?>
-<link rel='stylesheet' href='<?=autov("/plugins/community.applications/styles/awesomplete.css")?>'>
-<? if ($unRaid66 && ( $display['theme'] == "black" || $display['theme'] == "white") ): ?>
-<style>
-#searchBox{top:-0.6rem;padding:0.6rem;}
-.searchSubmit{height:3.4rem;}
-</style>
-<?endif;?>
-<style>
-.enabledIcon {color:<?=$unRaid66color?>;}
-.pageNavigation {color:<?=$unRaid66color?>;}
-.specialCategory {color:<?=$unRaid66color?>;}
-</style>
+<link type='text/css' rel='stylesheet' href="<?=autov("/plugins/community.applications/skins/Narrow/css.php")?>" >
+<link type='text/css' rel='stylesheet' href='<?=autov("/plugins/community.applications/styles/awesomplete.css")?>'>
 <script src='<?autov("/plugins/community.applications/javascript/awesomplete.min.js")?>'></script>
 <script src='<?autov("/plugins/community.applications/javascript/jquery.mobile.custom.min.js")?>'></script>
 <script>
@@ -1473,9 +1450,9 @@ function getFontSize() {
 > <center><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"></a></center>
 
 <?if ( $upgradeAvailable ) :?>
-<span id='upgradeAvailable'><center> <font color='red'>An update to Community Applications is Available. Click <a onclick=installPLGupdate('community.applications.plg',"CommunityApplications"); style=cursor:pointer>HERE</a> to install the update</center></font></span>
+<span id='upgradeAvailable'><center> <font color='red'>An update to Community Applications is Available. Click <a onclick=installPLGupdate('community.applications.plg',"CommunityApplications"); style='cursor:pointer;top:-1rem;'>HERE</a> to install the update</center></font></span>
 <?endif;?>
-<div class='dockerSearch' style='display:none'><center><figure><i class='fa fa-docker initDockerSearch' style='font-size:5rem;color:DarkCyan;cursor:pointer;'></i><figcaption class='initDockerSearch' style='cursor:pointer;'><a>Click Here To Get More Results From DockerHub</a></figcaption></figure></center></div>
+<div class='dockerSearch' style='display:none'><center><i class='fa fa-docker initDockerSearch' style='font-size:5rem;color:DarkCyan;cursor:pointer;'></i><br><a class='initDockerSearch' style='cursor:pointer;'>Click Here To Get More Results From DockerHub</a></center></div>
 <div style='width:100%; display:none;' class='multi_installDiv'><center><input class='multi_install multi_installButton' type='button' value='Install Selected Applications' disabled><input type='button' class='multi_installClear' value='Clear Selected' disabled></center></div>
 <div style='width:100%; display:block;' id='templates_content'></div>
 <div style='width:100%; display:none;' class='multi_installDiv'><center><input class='multi_install multi_installButton' type='button' value='Install Selected Applications' disabled><input type='button' class='multi_installClear' value='Clear Selected' disabled></center></div>
