--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -131,6 +131,7 @@ data.currentpage = 1;
 var dockerSearchFlag = false;
 
 $(function(){
+	$("#startup<?=$cfg['startup']?>").prop("disabled",true);
 	searchBoxInput = document.getElementById("searchBox");
 	searchBoxAwesomplete = new Awesomplete(searchBoxInput);
 
@@ -338,6 +339,7 @@ $(function(){
 	$(".multi_installButton").click(function()  { installMulti(); });
 	$(".multi_installClear").click(function()   { clearMultiInstall(); });
 	$("#homeIcon").click(function()             { appStore(); });
+	$(".startupButton").click(function()				{ updateContent(this); });
 
 <?if ( ! $unRaid66 ):?>
 	$("html").css("font-size","10px");
@@ -380,7 +382,18 @@ $(function(){
 	}
 });
 
-function updateContent() {
+function updateContent(button) {
+	var startupScreen;
+		if (! button) {
+			$(".startupButton").each(function() {
+				if ( $(this).prop("disabled") ) {
+					button = this;
+				}
+			});
+		}
+		$(".startupButton").prop("disabled",false);
+		$(button).prop("disabled",true);
+		startupScreen = $(button).data("search");
 		disableSearch();
 		mySpinner();
 		myAlert("Updating Content",appFeedModeMsg,true,"40");
@@ -393,7 +406,7 @@ function updateContent() {
 					openBox('/plugins/<?=$plugin?>/scripts/installMultiPlugin.sh&arg1='+plugins,'Install Plugin Applications',600,900,true);
 				} else {
 					forceSortOrder("#Date","#Down");
-					getContent(true,'INITIALIZE','None Selected');
+					getContent(true,'INITIALIZE','None Selected',"",startupScreen);
 				}
 			}
 		});
@@ -791,7 +804,7 @@ function setSortOrder() {
 	$(sortOrder.sortDir).prop("disabled",true);
 }
 
-function getContent(init,category,description,newApp) {
+function getContent(init,category,description,newApp,startupDisplay) {
 	data.currentpage = 1;
 	var initialize;
 
@@ -851,12 +864,17 @@ function getContent(init,category,description,newApp) {
 
 		var sortOrder = getSortOrder();
 
-		$.post(URL,{action:'get_content',category:category,newApp:newApp,sortOrder:sortOrder,windowWidth:windowWidth,fontSize:getFontSize()},function(data) {
+		$.post(URL,{action:'get_content',category:category,newApp:newApp,sortOrder:sortOrder,windowWidth:windowWidth,fontSize:getFontSize(),startupDisplay:startupDisplay},function(data) {
 			if (data) {
 				description = "Category: <font color='<?=$unRaid66color?>'>"+description+"</font>";
 				$("#Category").html(description);
 				$("#updateButton").prop("disabled",false);
 				updateDisplay(data);
+				if ( category == "NONE" ) {
+					$(".initialButtons").show();
+				} else {
+					$(".initialButtons").hide();
+				}
 				if ( initialize ) {
 					populateAutoComplete();
 				}
@@ -1119,7 +1137,7 @@ function appStore() {
 	data.nextpage = 0;
 	data.prevpage = 0;
 	initializeAppStore();
-	getContent(true,'INITIALIZE','None Selected');
+	updateContent();
 	$("#Category").html("None Selected");
 	data.docker = "";
 }
@@ -1338,6 +1356,7 @@ function installMulti() {
 }
 
 function updateDisplay(data) {
+	$('.selectCategory,.initialButtons').hide();
 	$('#templates_content').html(data);
 	$('img').on("error",function() {
 		var origSource = $(this).attr('src');
@@ -1390,7 +1409,6 @@ function restoreState() {
 	$(".dirButton").prop("disabled",false);
 	$("#"+$.cookie("sortButton")).prop("disabled",true);
 	$("#"+$.cookie("dirButton")).prop("disabled",true);
-	populateAutoComplete();
 	if ( $("#Category").text() == "Category: None Selected" ) {
 		updateContent();
 	}
@@ -1454,6 +1472,8 @@ function getFontSize() {
 <?endif;?>
 <div class='dockerSearch' style='display:none'><center><i class='fa fa-docker initDockerSearch' style='font-size:5rem;color:DarkCyan;cursor:pointer;'></i><br><a class='initDockerSearch' style='cursor:pointer;'>Click Here To Get More Results From DockerHub</a></center></div>
 <div style='width:100%; display:none;' class='multi_installDiv'><center><input class='multi_install multi_installButton' type='button' value='Install Selected Applications' disabled><input type='button' class='multi_installClear' value='Clear Selected' disabled></center></div>
+<div style='width:100%; display:none;' class='selectCategory'><center>Select a Section <i class='fa fa-list-ul enabledIcon' aria-hidden='true' style='font-size:2rem;cursor:auto;'></i> or Category <i class='fa fa-folder enabledIcon' aria-hidden='true' style='font-size:2rem;cursor:auto;'></i> above</center></div>
+<div style='width:100%; display:none;' class='initialButtons'><center><input type='button' class='startupButton' value='New Apps' id='startuponlynew' data-search='onlynew'><input type='button' id='startupnew' class='startupButton' value='Updated Apps' data-search='new'><input type='button' class='startupButton' id='startuprandom' data-search='random' value='Random Apps'><input type='button' class='startupButton' id='startuptrending' value='Trending Apps' data-search='trending'></center></div>
 <div style='width:100%; display:block;' id='templates_content'></div>
 <div style='width:100%; display:none;' class='multi_installDiv'><center><input class='multi_install multi_installButton' type='button' value='Install Selected Applications' disabled><input type='button' class='multi_installClear' value='Clear Selected' disabled></center></div>
 </center>
