--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -33,7 +33,6 @@ $unRaid66 = version_compare($unRaidSettings['version'],"6.5.3",">");
 <script src='<?autov("/plugins/community.applications/javascript/jquery.mobile.custom.min.js")?>'></script>
 <script>
 var URL = "/plugins/<?=$plugin?>/include/exec.php";
-var appFeedModeMsg = "Retrieving the latest application Lists";
 var last = $('input[name$="tabs"]').length;
 var searchBoxInput;
 var searchBoxAwesomplete;
@@ -388,33 +387,38 @@ $(function(){
 
 function updateContent(button) {
 	var startupScreen;
-		if (! button) {
-			$(".startupButton").each(function() {
-				if ( $(this).prop("disabled") ) {
-					button = this;
-				}
-			});
-		}
-		$(".startupButton").prop("disabled",false);
-		$(button).prop("disabled",true);
-		$.cookie("startup",button.id);
-		startupScreen = $(button).data("search");
-		disableSearch();
-		mySpinner();
-		myAlert("Updating Content",appFeedModeMsg,true,"40");
-		$.post(URL,{action:'force_update'}, function(data) {
-			if (data) {
-				if ( $.cookie("plugininstallpending") ) {
-					var plugins = $.cookie("plugininstallpending");
-					$.removeCookie("plugininstallpending");
-					myCloseAlert();
-					openBox('/plugins/<?=$plugin?>/scripts/installMultiPlugin.sh&arg1='+plugins,'Install Plugin Applications',600,900,true);
-				} else {
-					forceSortOrder("#Date","#Down");
-					getContent(true,'INITIALIZE','None Selected',"",startupScreen);
-				}
+	if (! button) {
+		var appFeedModeMsg = "Retrieving the latest application Lists";
+		$(".startupButton").each(function() {
+			if ( $(this).prop("disabled") ) {
+				button = this;
 			}
 		});
+	} else {
+		var appFeedModeMsg = "";
+	}
+	$(".startupButton").prop("disabled",false);
+	$(button).prop("disabled",true);
+	$.cookie("startup",button.id);
+	startupScreen = $(button).data("search");
+	disableSearch();
+	mySpinner();
+	if ( appFeedModeMsg ) {
+		myAlert("Updating Content",appFeedModeMsg,true,"40");
+	}
+	$.post(URL,{action:'force_update'}, function(data) {
+		if (data) {
+			if ( $.cookie("plugininstallpending" || ! appFeedModeMsg ) ) {
+				var plugins = $.cookie("plugininstallpending");
+				$.removeCookie("plugininstallpending");
+				myCloseAlert();
+				openBox('/plugins/<?=$plugin?>/scripts/installMultiPlugin.sh&arg1='+plugins,'Install Plugin Applications',600,900,true);
+			} else {
+				forceSortOrder("#Date","#Down");
+				getContent(true,'INITIALIZE','None Selected',"",startupScreen);
+			}
+		}
+	});
 }
 
 function enableIcon(icon,enable) {
@@ -1479,7 +1483,7 @@ function getFontSize() {
 <div class='dockerSearch' style='display:none'><center><i class='fa fa-docker initDockerSearch' style='font-size:5rem;color:DarkCyan;cursor:pointer;'></i><br><a class='initDockerSearch' style='cursor:pointer;'>Click Here To Get More Results From DockerHub</a></center></div>
 <div style='width:100%; display:none;' class='multi_installDiv'><center><input class='multi_install multi_installButton' type='button' value='Install Selected Applications' disabled><input type='button' class='multi_installClear' value='Clear Selected' disabled></center></div>
 <div style='width:100%; display:none;' class='selectCategory'><center>Select a Section <i class='fa fa-list-ul enabledIcon' aria-hidden='true' style='font-size:2rem;cursor:auto;'></i> or Category <i class='fa fa-folder enabledIcon' aria-hidden='true' style='font-size:2rem;cursor:auto;'></i> above</center></div>
-<div style='width:100%; display:none;' class='initialButtons'><center><input type='button' class='startupButton' value='New Apps' id='startuponlynew' data-search='onlynew'><input type='button' id='startupnew' class='startupButton' value='Updated Apps' data-search='new'><input type='button' class='startupButton' id='startuprandom' data-search='random' value='Random Apps'><input type='button' class='startupButton' id='startuptrending' value='Hottest Apps' data-search='trending'></center></div>
+<div style='width:100%; display:none;' class='initialButtons'><center><input type='button' class='startupButton' value='New Apps' id='startuponlynew' data-search='onlynew'><input type='button' id='startupnew' class='startupButton' value='Updated Apps' data-search='new'><input type='button' class='startupButton' id='startuprandom' data-search='random' value='Random Apps'><input type='button' class='startupButton' id='startuptrending' value='Trending Apps' data-search='trending'></center></div>
 <div style='width:100%; display:block;' id='templates_content'></div>
 <div style='width:100%; display:none;' class='multi_installDiv'><center><input class='multi_install multi_installButton' type='button' value='Install Selected Applications' disabled><input type='button' class='multi_installClear' value='Clear Selected' disabled></center></div>
 </center>
