Fixed: after installing app, autocomplete wouldn't populate

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -377,7 +377,8 @@ $(function(){
 		});
 	} else {
 		if ( (document.referrer.indexOf("/Apps/") > 1) && ( document.referrer.indexOf("/Apps/ca_settings") < 1 ) && cookiesEnabled() ) {
-			restoreState();
+      populateAutoComplete();
+      restoreState();
 			refreshDisplay();
 		} else {
 			updateContent();
