Startup cookie now doesn't expire when browser closed

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -400,7 +400,7 @@ function updateContent(button) {
 	}
 	$(".startupButton").prop("disabled",false);
 	$(button).prop("disabled",true);
-	$.cookie("startup",button.id);
+	$.cookie("startup",button.id,{expires:365});
 	startupScreen = $(button).data("search");
 	disableSearch();
 	mySpinner();
